--- a/Backend/api-gateway/src/main/resources/application.properties
+++ b/Backend/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# API Gateway Name
 spring.application.name=api-gateway
+
+# Server Port Configuration
+server.port=8080
+
+# CORS Configuration
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,PATCH,OPTIONS
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+
+# Logging Configuration
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
+
+# Example Route Configuration (optional)
+# spring.cloud.gateway.routes[0].id=user-service
+# spring.cloud.gateway.routes[0].uri=http://localhost:8082
+# spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**
