--- a/Backend/event-service/pom.xml
+++ b/Backend/event-service/pom.xml
@@ -68,6 +68,12 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+        </dependency>
+
         <!-- Spring GraphQL Test -->
         <dependency>
             <groupId>org.springframework.graphql</groupId>
