try to fix graphql

--- a/Backend/event-service/src/main/resources/application.properties
+++ b/Backend/event-service/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.application.name=event-service
 # GraphQL Configuration
 spring.graphql.graphiql.enabled=true
 spring.graphql.schema.printer.enabled=true
+spring.graphql.schema.locations=classpath:graphql/
