--- a/Backend/event-service/pom.xml
+++ b/Backend/event-service/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>spring-boot-starter-graphql</artifactId>
         </dependency>
 
+    <dependency>
+        <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-extended-scalars</artifactId>
+            <version>21.0</version>
+    </dependency>
+
         <!-- Spring Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
